# TinyRenderEngine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  git-init.sh
cmake/: FindOpus.cmake  FindSDL2.cmake  FindSDL2_image.cmake
include/: audio.h  baker.h  contact_3D.h  font.h  gizmo.h  model.h  model_tools.h  profiler.h  rendertarget.h  shader.h  textgenerator.h  texture.h  textureSampler.h  tre_audio.h  tre_baker.h  tre_contact_2D.h  tre_contact_3D.h  tre_font.h  tre_gizmo.h  tre_model.h  tre_model_importer.h  tre_model_tools.h  tre_openglinclude.h  tre_profiler.h  tre_rendertarget.h  tre_shader.h  tre_shadergenerator.h  tre_textgenerator.h  tre_texture.h  tre_ui.h  tre_utils.h  tre_utils.hpp  tre_windowContext.h  ui.h  utils.h  utils.hpp  windowHelper.h
src/: audio.cpp  baker.cpp  contact_2D.cpp  contact_3D.cpp  font.cpp  gizmo.cpp  model.cpp  model_base.cpp  model_generator.cpp  model_importer.cpp  model_layout.cpp  model_tools2D.cpp  model_tools3D.cpp  profiler.cpp  rendertarget.cpp  shader.cpp  shadergenerator.cpp  textgenerator.cpp  texture.cpp  textureSampler.cpp  texture_compress.cpp  ui.cpp  ui_layout.cpp  ui_widget.cpp  ui_window.cpp  utils.cpp  windowContext.cpp  windowHelper.cpp
test/: CMakeLists.txt  README.md  testAudioMixer.cpp  testBasic.cpp  testBenchmark.cpp  testContact2D.cpp  testContact2D.h  testContact3D.cpp  testContact3D.h  testDemoScene.cpp  testGui.cpp  testIO.cpp  testLighting.cpp  testMesh2D.cpp  testMesh3D.cpp  testTextureCompression.cpp  testTextureSampling.cpp
test/resources/: font_arial_88.fnt  hemispherical_33p.tif  music-piano.opus  music-strings.opus  objects.blend  objects.mtl  scenes.blend
test/resources/scene/: scene.gltf
